--- a/src/Components/Videoplayer/videoPlayer.css
+++ b/src/Components/Videoplayer/videoPlayer.css
@@ -59,6 +59,10 @@
     height: 6rem;
 }
 
+.playlistLogo{
+    display: none;
+}
+
 .videoImage{
     width: 100%;
     border: solid;
@@ -73,7 +77,7 @@
 
 @media only screen and (max-width: 600px){
     .video{
-        margin-top: 29rem;
+        margin-top: 65vw;
         display: flex;
         flex-direction: column;
     }
@@ -83,10 +87,11 @@
         height: 30rem;
     }
 
+
     .videoSocial1{
         border: solid;
         height: 7rem;
-        display: flex;
+        display: none;
         justify-content: center;
     }
     
@@ -97,6 +102,12 @@
         display: flex;
         justify-content: center;
     }
+
+    .videoSocial2 a{
+        display: flex;
+        flex-direction: row;
+        gap: 2rem;
+    }
     
     .videoSocial{
         background-color: whitesmoke;
@@ -106,17 +117,34 @@
     }
 
     .videos{
-        width: 100%;
-        height: 300rem;
         display: flex;
-        background-color: tomato;
+        flex-basis: 69vw;
+        height: 100%;    
+        background-color: whitesmoke;    
+        flex-direction: column;
+    }
+
+    .videos h4{
+        font-weight: 400;
+        text-align: center;
+        
     }
 
     .videoImage{
-        width: 100%;
+        display: flex;
+        height: 10rem;
         border: solid;
-        border-radius: 1rem;
-        border-color: whitesmoke;
-        cursor: pointer;
+        height: 20rem;
+    }
+
+    .videoList{
+        display: flex;
+        flex-direction: row;        
+        
+    }
+
+    .playlistLogo{
+        display: flex;
+        width: 10rem;
     }
 }
